# api-veroneze

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  README.org  RunDev.ps1  docker-compose.yml  rundev.sh  setup.cfg
src/api_veroneze/: __init__.py  app_bcrypt.py  auth.py  data.db  database.py  db.json  doc.py  routes.py  server.py  start_database.py
src/api_veroneze/http/: aluno.http  curso.http  login.http
src/api_veroneze/models/: __init__.py  aluno.py  curso.py  user.py
src/api_veroneze/views/: aluno.py  curso.py  login.py
tests/: insert.py  path_test.py  yourapplication.py
