[metadata]
name = api_veroneze
version = 0.8.0
author = Pedro Henrique Martins de Souza
author_email = pedromartins12117@gmail.com


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    psycopg2>=2.9.3
    SQLAlchemy>=1.4.32
    Flask>=2.0.3
    Flask-SQLAlchemy>=2.5.1
    waitress>=2.1.0
    flasgger>=0.9.5
    Flask-JWT-Extended>=4.4.0


[options.packages.find]
where = src